카카오맵 지도 api 지도 띄우기

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <script
+      type="text/javascript"
+     src="//dapi.kakao.com/v2/maps/sdk.js?appkey=0113aa939aec39148b750ef574dc0c58&libraries=services,clusterer"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
